# cli-chess

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml
.github/workflows/: build-fairy-sf-binaries.yml  ci.yml  test.yml
cli-chess/: config.py
e4/: config.py
src/cli_chess/: __init__.py  __main__.py  __metadata__.py  board.py  common_utils.py  event_handler.py  main_model.py  main_presenter.py  main_view.py  run_app.py  start_app.py
src/cli_chess/board/: board_model.py  board_presenter.py  board_view.py
src/cli_chess/core/api/: __init__.py  api_manager.py  game_state_dispatcher.py  game_stream.py  incoming_event_manger.py
src/cli_chess/core/game/: __init__.py  game_metadata.py  game_model_base.py  game_options.py  game_presenter_base.py  game_view_base.py
src/cli_chess/core/main/: __init__.py  main_model.py  main_presenter.py  main_view.py
src/cli_chess/core/startup/: __init__.py  startup_model.py  startup_presenter.py  startup_view.py
src/cli_chess/dialogs/: __init__.py  about.py  api_token_input.py
src/cli_chess/game/: __init__.py  board.py  common.py  game_incoming_event.py  game_manager.py  game_model.py  game_model_base.py  game_options.py  game_presenter.py  game_presenter_base.py  game_view.py  game_view_base.py
src/cli_chess/game/board/: board_model.py  board_presenter.py  board_view.py
src/cli_chess/game/material_difference/: material_difference_model.py  material_difference_presenter.py  material_difference_view.py
src/cli_chess/game/move_list/: move_list_model.py  move_list_presenter.py  move_list_view.py
src/cli_chess/game/offline/: offline_game_model.py  offline_game_presenter.py  offline_game_view.py
src/cli_chess/game/online/: __init__.py  game_incoming_event.py  game_manager.py
src/cli_chess/game_components/: common.py
src/cli_chess/game_components/board/: board_presenter.py  board_view.py
src/cli_chess/game_components/engine/: __init__.py  engine_model.py
src/cli_chess/game_components/material_difference/: __init__.py  material_difference_model.py  material_difference_presenter.py
src/cli_chess/game_components/move_list/: move_list_model.py  move_list_presenter.py  move_list_view.py
src/cli_chess/menus/: __init__.py  main_menu.py  menu_common.py  menu_model.py  menu_model_base.py  menu_options.py  menu_presenter.py  menu_presenter_base.py  menu_view.py  menu_view_base.py
src/cli_chess/menus/main_menu/: __init__.py  main_menu_model.py  main_menu_presenter.py  main_menu_view.py
src/cli_chess/menus/offline_games_menu/: __init__.py  offline_games_menu_model.py  offline_games_menu_presenter.py  offline_games_menu_view.py
src/cli_chess/menus/online_games_menu/: __init__.py  online_games_menu_model.py  online_games_menu_presenter.py  online_games_menu_view.py
src/cli_chess/menus/play_offline_menu/: __init__.py  play_offline_menu_model.py  play_offline_menu_presenter.py  play_offline_menu_view.py
src/cli_chess/menus/program_settings_menu/: __init__.py  program_settings_menu_model.py  program_settings_menu_presenter.py  program_settings_menu_view.py
src/cli_chess/menus/root_menu/: __init__.py  root_menu_model.py  root_menu_presenter.py  root_menu_view.py
src/cli_chess/menus/settings_menu/: __init__.py  settings_menu_model.py  settings_menu_presenter.py  settings_menu_view.py
src/cli_chess/menus/tv_channel_menu/: __init__.py  tv_channel_menu_model.py  tv_channel_menu_presenter.py  tv_channel_menu_view.py
src/cli_chess/menus/versus_menus/: __init__.py  versus_menu_models.py  versus_menu_presenters.py  versus_menu_views.py
src/cli_chess/menus/vs_computer_menu/: __init__.py  vs_computer_menu_model.py  vs_computer_menu_presenter.py  vs_computer_menu_view.py
src/cli_chess/modules/: __init__.py  common.py  game_options.py
src/cli_chess/modules/about/: __init__.py  about_presenter.py  about_view.py
src/cli_chess/modules/board/: __init__.py  board_model.py  board_presenter.py  board_view.py
src/cli_chess/modules/chat/: __init__.py  chat_model.py  chat_presenter.py  chat_view.py
src/cli_chess/modules/clock/: __init__.py  clock_presenter.py  clock_view.py
src/cli_chess/modules/engine/: engine_model.py  engine_presenter.py
src/cli_chess/modules/material_difference/: material_difference_model.py  material_difference_presenter.py  material_difference_view.py
src/cli_chess/modules/move_list/: __init__.py  move_list_model.py  move_list_presenter.py  move_list_view.py
src/cli_chess/modules/player_info/: __init__.py  player_info_presenter.py  player_info_view.py
src/cli_chess/ui/: __init__.py  api_token_input.py  main_menu.py
src/cli_chess/utils/: __init__.py  argparse.py  common.py  config.py  event.py  logging.py  styles.py  ui_common.py
src/e4/: __init__.py  board.py  config.py
(+54 files in other folders)
