# Copyright (C) 2021-2023 Trevor Bayless <trevorbayless1@gmail.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <http://www.gnu.org/licenses/>.

[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
keywords = chess, terminal, fairy-stockfish, stockfish, lichess, lichess.org, cli, san, uci
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Environment :: Console
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Games/Entertainment :: Board Games
    Topic :: Games/Entertainment :: Turn Based Strategy
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Natural Language :: English

[options]
packages = find:
package_dir = = src
python_requires = >= 3.7
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cli-chess = cli_chess.__main__:run

[flake8]
max-line-length = 150
per-file-ignores =
    */__init__.py: F401
